fixed css which was causing layout issues with the GraphiQL editor

--- a/app/app.css
+++ b/app/app.css
@@ -28,6 +28,18 @@ body {
 .wrapper {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.graphiql-wrapper {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
+#graphiql-container {
+  flex: 1;
 }
 
 .config-form {
